Refactor "group" to "union" and improve data preparation.
Changed references from "group" to "union" for clarity and consistency. Enhanced data preparation logic to handle various edge cases, ensuring proper associations and error handling within unions.

Refactor stream filters and implement person unlinking

Rearranged the order of stream filters for consistency and readability. Implemented the method to unlink a person from a parent group in the genealogical tree, ensuring proper removal and UI refresh.

Refactor image handling and introduce preferred image editing

Rework image handling in several classes to use Path instead of String for better type safety. Add new methods and interfaces for editing preferred images in the UI, enhancing user experience by providing clearer and more direct interactions.

Add createRecordOnly for MediaDialog and improve file handling

Introduced a new static method `createRecordOnly` in MediaDialog for specific dialog creation. Enhanced file handling logic to include path corrections and handle null values gracefully. Removed redundant `createSelectOnly` method from GroupDialog.

Add feature to remove preferred photo on right-click

Implemented a context menu option to remove the preferred photo from a person's profile when right-clicking. The code now prompts for confirmation and removes the photo if confirmed.